--- a/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
+++ b/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
@@ -386,8 +386,16 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
         "import scipy.stats as stats\n",
+        "import missingno as msno\n",
+        "import matplotlib.cm as cm\n",
+        "import geopandas as gpd\n",
+        "!pip install country_converter --upgrade\n",
+        "import country_converter as coco\n",
+        "import plotly.express as px\n",
+        "import matplotlib\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "# import string for Removing Punctuations\n",
         "import string\n",
         "# import re for Remove URLs & Remove words and digits contain digits\n",
@@ -2601,7 +2609,194 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 18 - Correlation Heatmap"
+        "#### Chart - 18 - Netflix country wise"
+      ],
+      "metadata": {
+        "id": "H9SNvna1UX4n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "country = netflix_dataset.country.value_counts()\n",
+        "\n",
+        "coun = {}\n",
+        "\n",
+        "#for loop coutry wise\n",
+        "for idx, val in country.items():\n",
+        "    l = idx.split(',')\n",
+        "    for i in l:\n",
+        "        i = i.strip()\n",
+        "        if i in coun.keys():\n",
+        "            d = {}\n",
+        "            d[i] = val + coun[i]\n",
+        "            coun.update(d)\n",
+        "        else:\n",
+        "            d = {i:val}\n",
+        "            coun.update(d)\n",
+        "\n",
+        "nation, count = [],[]\n",
+        "for idx, val in coun.items():\n",
+        "    nation.append(idx)\n",
+        "    count.append(val)\n",
+        "\n",
+        "#craete a dataframe\n",
+        "temp = (pd.DataFrame({'country':nation, 'count': count})\n",
+        "        .sort_values('count', ascending = False))\n",
+        "\n",
+        "\n",
+        "temp['color'] = temp['count'].apply(lambda x : '#b20710' if x > temp['count'].values[30] else 'grey')\n",
+        "\n",
+        "#loading geodataframe\n",
+        "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
+        "\n",
+        "#converting country names to iso codes\n",
+        "temp['iso_code'] = coco.convert(names=temp['country'], to ='ISO3')\n",
+        "temp = temp[temp['iso_code'] != 'not found']\n",
+        "\n",
+        "# merging geodataframe and pandas dataframe\n",
+        "temp_map = world.merge(temp,left_on = 'iso_a3', right_on = 'iso_code')\n",
+        "\n",
+        "temp_map.drop(columns = ['continent', 'gdp_md_est','pop_est','name',], inplace = True)\n",
+        "temp_map = temp_map.sort_values(by = 'count', ascending = False)\n",
+        "\n",
+        "\n",
+        "#viualization\n",
+        "colors = ['#b20710','#ff7f0e','#2ca02c',]\n",
+        "cmap  = matplotlib.colors.LinearSegmentedColormap.from_list(\"\", colors = colors)\n",
+        "\n",
+        "fig, ax  = plt.subplots(figsize = (15,7.5), dpi = 80)\n",
+        "fig.patch.set_facecolor('#FFF8DC')\n",
+        "ax.set_facecolor('#FFF8DC')\n",
+        "temp_map.dropna().plot(column = 'count',\n",
+        "                       color = temp_map.dropna()['color'],\n",
+        "                       cmap = cmap,\n",
+        "                       scheme='quantiles',\n",
+        "                       k=10, legend = False,\n",
+        "                       ax = ax)\n",
+        "\n",
+        "for loc in ['left','right','top','bottom']:\n",
+        "    ax.spines[loc].set_visible(False)\n",
+        "ax.axes.get_xaxis().set_visible(False)\n",
+        "ax.axes.get_yaxis().set_visible(False)\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "gm67eadjTPNK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "EVBiYAssVSES"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The specific chart chosen in this code is a choropleth map. A choropleth map is suitable for this data visualization task for several reasons:\n",
+        "\n",
+        "1. ***Geographical Context:---*** Choropleth maps are effective for displaying geographical distributions. In this case, the data seems to be related to Netflix show counts in different countries. By mapping the data to a world map, viewers can quickly understand the global distribution of Netflix content.\n",
+        "\n",
+        "2. ***Data Variation:---*** Choropleth maps use colors to represent data variations across regions. Different shades of colors on the map represent different counts of Netflix content, allowing viewers to identify countries with higher or lower show counts at a glance.\n",
+        "\n",
+        "3. ***Quick Comparison:---*** With this map, viewers can compare countries side by side in terms of their Netflix content counts. It's easy to identify which countries have a higher count and which have a lower count based on the color intensity.\n",
+        "\n",
+        "4. ***Geospatial Insights:---*** Choropleth maps provide geospatial insights that can be difficult to convey through other types of charts. For instance, viewers can see patterns of content consumption based on regions, which can lead to interesting observations and insights.\n",
+        "\n",
+        "5. ***Visual Appeal:---*** The use of colors in choropleth maps makes them visually appealing and engaging. The color choices can also help highlight specific data points or trends.\n",
+        "\n",
+        "Overall, the choice of the choropleth map is well-suited for visualizing this type of data, as it effectively combines geographical context with data representation, allowing viewers to grasp the distribution of Netflix content counts across different countries."
+      ],
+      "metadata": {
+        "id": "n3yLJ3nCVdeA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "5rVsg2f7WTqt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I can provide some general insights that might be derived from the chart based on the provided code:\n",
+        "\n",
+        "1. ***Distribution of Netflix Content:---*** The chart allows viewers to understand how the count of Netflix content is distributed across different countries. Countries with a higher count of Netflix content will appear with a darker color, while countries with a lower count will appear with a lighter color.\n",
+        "\n",
+        "2. ***High-Count Countries:---*** Countries represented with the color **'#b20710'** (likely red) indicate those with a count of Netflix content greater than the 30th value in the dataset. These countries could be potential powerhouses in terms of Netflix content availability.\n",
+        "\n",
+        "3. ***Medium-Count Countries:---***\n",
+        "Countries represented with the color **'#ff7f0e'** likely have a count of Netflix content equal to or less than the 30th value in the dataset. These countries might have a more moderate presence of Netflix content.\n",
+        "\n",
+        "4. ***Geographical Patterns:---*** Viewers can observe geographical patterns in the distribution of Netflix content. For example, continents or regions with a higher density of red countries might suggest regions with a stronger focus on Netflix content production or consumption.\n",
+        "\n",
+        "5. ***Outliers:---*** Countries that stand out due to their high or low counts could lead to insights. High outliers might signify countries with unique content offerings, while low outliers might indicate regions with limited access to Netflix content.\n",
+        "\n",
+        "6. ***Data Variability:---*** The varying color intensities highlight the variability in Netflix content counts across different countries. This can lead to questions about factors influencing this variability, such as cultural preferences, licensing agreements, or market demand.\n",
+        "\n",
+        "7. ***Regional Comparisons:---*** Viewers can compare neighboring countries or countries within the same region to see how Netflix content counts differ. This can potentially reveal patterns related to regional content preferences.\n",
+        "\n",
+        "8. ***Data Discrepancies:---*** If a country is unexpectedly colored or doesn't match the expected content count, this might indicate discrepancies in the data or inaccuracies in mapping country names to ISO codes.\n",
+        "\n",
+        "Remember, these insights are based on the general principles of interpreting choropleth maps. The specific insights you can derive will depend on the actual data being used and the context of the analysis."
+      ],
+      "metadata": {
+        "id": "ocSd4isEWUMu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact?\n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "m0-ICETzXcQX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Positive Business Impact:---***\n",
+        "\n",
+        "1. ***Strategic Content Allocation:---*** High-count regions (red) could be prioritized for content investment, leading to increased viewership and revenue.\n",
+        "\n",
+        "2. ***Targeted Marketing:---*** Tailoring marketing to regions with high content consumption could boost subscriptions and revenue.\n",
+        "\n",
+        "3. ***Expansion Opportunities:---*** Gray regions with moderate counts could be targeted for expansion, tapping into new markets.\n",
+        "\n",
+        "***Negative Growth Potential:---***\n",
+        "1. ***Underperforming Regions:---*** Low content counts in high-potential areas might indicate missed growth opportunities.\n",
+        "\n",
+        "2. ***Market Saturation:---*** High-count regions might be saturated, posing challenges for further growth without innovative strategies.\n",
+        "\n",
+        "3. ***Regional Preferences:---*** Ignoring regional content preferences could lead to reduced engagement and subscriptions.\n",
+        "\n",
+        "4. ***Unexplained Outliers:---*** Anomalies or inaccurate data might misguide decisions, potentially causing negative outcomes.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Rn4Ppd8OXc9d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 19 - Correlation Heatmap"
       ],
       "metadata": {
         "id": "NC_X3p0fY2L0"
@@ -2747,7 +2942,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 19 - Pair Plot"
+        "#### Chart - 20 - Pair Plot"
       ],
       "metadata": {
         "id": "q29F0dvdveiT"
@@ -3428,15 +3623,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "w1KW3DH8nVEM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Display the updated dataset\n",
         "print(netflix_dataset.head())"
@@ -3936,49 +4122,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Use boolean indexing to find rows with 'Haider' in the 'director' column\n",
-        "rows_with_haider = netflix_dataset[netflix_dataset['director'] == 'Haider']\n",
-        "\n",
-        "print(rows_with_haider)"
+        "# No need  for feature selection"
       ],
       "metadata": {
-        "id": "va-t9SG0hHEQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "# Replace 'target_column' with the actual target column name\n",
-        "target_column = 'type'\n",
-        "X = netflix_dataset.drop(target_column, axis=1)\n",
-        "y = netflix_dataset[target_column]\n",
-        "\n",
-        "# Convert categorical variables to numerical using LabelEncoder\n",
-        "label_encoder = LabelEncoder()\n",
-        "\n",
-        "X_encoded = X.copy()\n",
-        "for col in X.select_dtypes(include=['object']).columns:\n",
-        "    X_encoded[col] = label_encoder.fit_transform(X[col])\n",
-        "\n",
-        "# Apply SelectKBest feature selection\n",
-        "num_features_to_select = 10  # Set the desired number of features to select\n",
-        "selector = SelectKBest(score_func=chi2, k=num_features_to_select)\n",
-        "X_new = selector.fit_transform(X_encoded, y)\n",
-        "\n",
-        "# Get the indices of the selected features\n",
-        "selected_feature_indices = selector.get_support(indices=True)\n",
-        "\n",
-        "# Get the selected feature names\n",
-        "selected_feature_names = X_encoded.columns[selected_feature_indices]\n",
-        "\n",
-        "print(\"Selected features:\")\n",
-        "print(selected_feature_names)"
-      ],
-      "metadata": {
-        "id": "6Gq1mFHimDEA"
+        "id": "truHFEfZOl5I"
       },
       "execution_count": null,
       "outputs": []
@@ -4128,48 +4275,10 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Dimensionality reduction may be needed in certain cases. If the dataset contains a large number of features, it can lead to the curse of dimensionality, which can result in increased computational complexity, overfitting, and reduced model interpretability. Dimensionality reduction techniques aim to reduce the number of features while preserving as much of the relevant information as possible.\n",
-        "\n",
-        "By reducing the dimensionality of the data, we can simplify the model, improve its generalization capabilities, and potentially speed up training and inference. However, dimensionality reduction should be used judiciously, as it might lead to some loss of information. It's important to consider the trade-off between reducing complexity and preserving meaningful features.\n",
-        "\n",
-        "Overall, whether dimensionality reduction is needed depends on the specific characteristics of the dataset and the goals of the analysis or modeling task."
-      ],
-      "metadata": {
-        "id": "GGRlBsSGDtTQ"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# DImensionality Reduction (If needed)\n",
-        "\n",
-        "# Identify non-numeric columns and encode them\n",
-        "categorical_columns = [ 'country', 'target_ages']\n",
-        "encoder = OneHotEncoder()\n",
-        "X_encoded = encoder.fit_transform(X[categorical_columns])\n",
-        "\n",
-        "# Standardize the entire dataset\n",
-        "scaler = StandardScaler()\n",
-        "X_scaled = scaler.fit_transform(X_encoded)\n",
-        "\n",
-        "# Apply PCA\n",
-        "pca = PCA(n_components=2)\n",
-        "X_pca = pca.fit_transform(X_scaled)\n",
-        "\n",
-        "# Create a new DataFrame with reduced dimensions\n",
-        "pca_df = pd.DataFrame(data=X_pca, columns=['PC1', 'PC2'])\n",
-        "\n",
-        "# Concatenate with the target variable if necessary\n",
-        "pca_df = pd.concat([pca_df, y], axis=1)\n",
-        "\n",
-        "# Visualize the reduced data\n",
-        "plt.scatter(pca_df['PC1'], pca_df['PC2'], c=pca_df['target'], cmap='viridis')\n",
-        "plt.xlabel('Principal Component 1')\n",
-        "plt.ylabel('Principal Component 2')\n",
-        "plt.title('PCA - Dimensionality Reduction')\n",
-        "plt.show()\n"
+        "# No need"
       ],
       "metadata": {
         "id": "kQfvxBBHDvCa"
@@ -4207,7 +4316,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split your data to train and test. Choose Splitting ratio wisely."
+        "# Split your data to train and test. Choose Splitting ratio wisely.\n"
       ],
       "metadata": {
         "id": "0CTyd2UwEyNM"
