--- a/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
+++ b/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
@@ -58,17 +58,13 @@
         "Nff-vKELpZyI",
         "xiyOF9F70UgQ",
         "id1riN9m0vUs",
-        "-oLEiFgy-5Pf",
+        "C74aWNz2AliB",
         "pEMng2IbBLp7",
         "rAdphbQ9Bhjc",
         "nqoHp30x9hH9",
         "rMDnDkt2B6du",
-        "VfCC591jGiD4",
-        "OB4l2ZhMeS1U",
-        "ArJBuiUVfxKd",
-        "4qY1EAkEfxKe",
-        "PiV4Ypx8fxKe",
-        "TfvqoZmBfxKf",
+        "P1XJ9OREExlT",
+        "VFOzZv6IFROw",
         "dJ2tPlVmpsJ0",
         "JWYfwnehpsJ1",
         "-jK_YjpMpsJ2",
@@ -3466,17 +3462,6 @@
     {
       "cell_type": "code",
       "source": [
-        "netflix_dataset.head(2)"
-      ],
-      "metadata": {
-        "id": "Fpw0_jvIdC_0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Check for columns containing lists or strings\n",
         "list_columns = netflix_dataset.applymap(lambda x: isinstance(x, list)).any()\n",
         "string_columns = netflix_dataset.applymap(lambda x: isinstance(x, str)).any()\n",
@@ -3487,6 +3472,55 @@
       ],
       "metadata": {
         "id": "Be5wlZJCdad8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sample DataFrame\n",
+        "data = pd.DataFrame({\n",
+        "    'col1': [1, 2, 3],\n",
+        "    'col2': ['string1', 'string2', 'string3'],\n",
+        "    'col3': [1.0, 2.5, 3.7],\n",
+        "    'col4': [[1, 2], [3, 4], [5, 6]],\n",
+        "    'col5': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]],\n",
+        "    'col6': [[1, 'a'], [2, 'b'], [3, 'c']]\n",
+        "})\n",
+        "\n",
+        "# Iterate through columns and check data types\n",
+        "for col in data.columns:\n",
+        "    dtype = data[col].dtype\n",
+        "    if dtype == int:\n",
+        "        print(f\"Column '{col}' contains integers\")\n",
+        "    elif dtype == float:\n",
+        "        print(f\"Column '{col}' contains floats\")\n",
+        "    elif dtype == str:\n",
+        "        print(f\"Column '{col}' contains strings\")\n",
+        "    elif dtype == list:\n",
+        "        print(f\"Column '{col}' contains lists\")"
+      ],
+      "metadata": {
+        "id": "fyRqnwOW3DrB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sample DataFrame with a \"title\" column containing numbers as strings\n",
+        "data = pd.DataFrame({'title': ['3', '719', '2359', '9']})\n",
+        "\n",
+        "# Convert the \"title\" column to float64 data type\n",
+        "data['title'] = data['title'].astype('float64')\n",
+        "\n",
+        "# Print the DataFrame to see the result\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "id": "IijtMQjRzQBp"
       },
       "execution_count": null,
       "outputs": []
@@ -3937,6 +3971,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Answer Here."
+      ],
+      "metadata": {
+        "id": "ZKr75IDuEM7t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 8. Data Splitting"
       ],
       "metadata": {
@@ -3946,10 +3989,29 @@
     {
       "cell_type": "code",
       "source": [
+        "# Select numerical columns\n",
+        "numerical_columns = netflix_dataset.select_dtypes(include=[np.number]).columns.tolist()\n",
+        "\n",
+        "print(\"Numerical columns:\", numerical_columns)"
+      ],
+      "metadata": {
+        "id": "Wx7MUL86LYzT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Split your data to train and test. Choose Splitting ratio wisely.\n",
         "\n",
-        "X = netflix_dataset.drop('type', axis=1)\n",
-        "y  = netflix_dataset['type']\n",
+        "# Specify the column names for numerical features (X)\n",
+        "numerical_column = ['release_year', 'rating', 'duration', 'count', 'duration_year_combo']\n",
+        "target_column = 'type'\n",
+        "\n",
+        "\n",
+        "X = netflix_dataset[numerical_column]\n",
+        "y  = netflix_dataset[target_column]\n",
         "\n",
         "# Split the dataset into training and testing dataset (80% traininig, 20% testing)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -3989,6 +4051,24 @@
       ],
       "metadata": {
         "id": "P1XJ9OREExlT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Do you think the dataset is imbalanced? Explain Why."
+      ],
+      "metadata": {
+        "id": "VFOzZv6IFROw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Answer Here."
+      ],
+      "metadata": {
+        "id": "GeKDIv7pFgcC"
       }
     },
     {
@@ -4097,10 +4177,32 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 1 Implementation\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "from sklearn.cluster import KMeans\n",
         "\n",
-        "# Fit the Algorithm\n",
+        "# Standardize the features\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
         "\n",
-        "# Predict on the model"
+        "# Choose the number of clusters (K)\n",
+        "num_clusters = 3\n",
+        "\n",
+        "# Initialize the KMeans model\n",
+        "kmeans = KMeans(n_clusters=num_clusters, random_state=42)\n",
+        "\n",
+        "# Fit the model to the standardized data\n",
+        "kmeans.fit(X_scaled)\n",
+        "\n",
+        "# Predict cluster labels for the data\n",
+        "cluster_labels = kmeans.predict(X_scaled)\n",
+        "\n",
+        "# Add cluster labels to the dataset\n",
+        "netflix_dataset['cluster'] = cluster_labels\n",
+        "\n",
+        "# Now the dataset has an additional 'cluster' column indicating cluster assignments\n",
+        "print(netflix_dataset.head())"
       ],
       "metadata": {
         "id": "7ebyywQieS1U"
@@ -4120,7 +4222,26 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart"
+        "# Visualizing evaluation Metric Score chart\n",
+        "# Calculate silhouette scores for different number of clusters\n",
+        "silhouette_scores = []\n",
+        "num_clusters_range = range(2, 11)\n",
+        "\n",
+        "for num_clusters in num_clusters_range:\n",
+        "    kmeans = KMeans(n_clusters=num_clusters, random_state=42)\n",
+        "    cluster_labels = kmeans.fit_predict(X_scaled)\n",
+        "    silhouette_avg = silhouette_score(X_scaled, cluster_labels)\n",
+        "    silhouette_scores.append(silhouette_avg)\n",
+        "\n",
+        "# Plot silhouette scores\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(num_clusters_range, silhouette_scores, marker='o')\n",
+        "plt.xlabel('Number of Clusters')\n",
+        "plt.ylabel('Silhouette Score')\n",
+        "plt.title('Silhouette Score vs. Number of Clusters')\n",
+        "plt.xticks(num_clusters_range)\n",
+        "plt.grid(True)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "rqD5ZohzfxKe"
@@ -4140,11 +4261,41 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install scikit-learn scikit-optimize"
+      ],
+      "metadata": {
+        "id": "cPX7wSe7NwnI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "# Initialize KMeans for hyperparameter optimization\n",
+        "kmeans = KMeans(random_state=42)\n",
         "\n",
-        "# Fit the Algorithm\n",
+        "# Define the parameter grid\n",
+        "param_grid = {'n_clusters': range(2, 11)}\n",
         "\n",
-        "# Predict on the model"
+        "# Initialize GridSearchCV\n",
+        "grid_search = GridSearchCV(kmeans, param_grid, scoring='neg_mean_squared_error', cv=3)\n",
+        "grid_search.fit(X_train)\n",
+        "\n",
+        "# Get the best K\n",
+        "best_k = grid_search.best_params_['n_clusters']\n",
+        "\n",
+        "# Fit the KMeans model with the best parameter\n",
+        "best_kmeans = KMeans(n_clusters=best_k, random_state=42)\n",
+        "best_kmeans.fit(X_train)\n",
+        "cluster_labels = best_kmeans.labels_\n",
+        "\n",
+        "# Print best K and silhouette score\n",
+        "print(\"Best K:\", best_k)\n",
+        "silhouette_avg = silhouette_score(X_train, cluster_labels)\n",
+        "print(\"Silhouette Score:\", silhouette_avg)"
       ],
       "metadata": {
         "id": "Dy61ujd6fxKe"
@@ -4164,7 +4315,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "The hyperparameter optimization technique used was GridSearchCV. GridSearchCV systematically tests all possible combinations of hyperparameters in a predefined grid, making it suitable for a comprehensive search with relatively smaller parameter spaces. It's reliable but can be computationally expensive."
       ],
       "metadata": {
         "id": "negyGRa7fxKf"
@@ -4182,7 +4333,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "A Silhouette Score of 0.767 is relatively high, indicating that the clustering model has produced well-defined clusters. A Silhouette Score close to 1 suggests that the data points are well clustered and are far away from the neighboring clusters.\n",
+        "\n",
+        "The best value of K being 2 suggests that the algorithm found two clusters to be the most suitable for your data according to the Silhouette Score. This means that the data points have been grouped into two distinct clusters that are well-separated.\n",
+        "\n",
+        "Given this Silhouette Score and best value of K, it seems that the KMeans clustering model has successfully segmented your Netflix Movies and TV Shows dataset into two meaningful clusters with a high degree of separation. This could be an indication of distinct patterns or characteristics in the data. However, it's important to further analyze the results in the context of your domain and interpret the clusters to ensure they make sense from a practical standpoint.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "OaLui8CcfxKf"
