--- a/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
+++ b/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
@@ -7,11 +7,13 @@
       "provenance": [],
       "collapsed_sections": [
         "FJNUwmbgGyua",
+        "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
-        "HhfV-JJviCcP",
         "3RnN4peoiCZX",
         "x71ZqKXriCWQ",
+        "7hBIi_osiCS2",
+        "JlHwYmJAmNHm",
         "H0kj-8xxnORC",
         "nA9Y7ga8ng1Z",
         "u3PMJOP6ngxN",
@@ -66,14 +68,13 @@
         "BhH2vgX9EjGr",
         "P1XJ9OREExlT",
         "VFOzZv6IFROw",
-        "VfCC591jGiD4",
         "OB4l2ZhMeS1U",
         "ArJBuiUVfxKd",
         "dJ2tPlVmpsJ0",
+        "JWYfwnehpsJ1",
         "HAih1iBOpsJ2",
         "zVGeBEFhpsJ2",
         "bmKjuQ-FpsJ3",
-        "Fze-IPXLpx6K",
         "h_CCil-SKHpo",
         "KH5McJBi2d8v",
         "iW_Lq9qf2h6X",
@@ -392,16 +393,27 @@
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
         "from sklearn.feature_selection import SelectKBest, f_classif, chi2\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "\n",
+        "from skopt import BayesSearchCV\n",
+        "from skopt.space import Integer\n",
         "\n",
         "from sklearn.preprocessing import OneHotEncoder, MinMaxScaler\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
-        "\n",
+        "from sklearn.mixture import GaussianMixture\n",
         "from sklearn.decomposition import PCA\n",
-        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "from sklearn.cluster import AgglomerativeClustering\n",
+        "from pylab import rcParams\n",
+        "import scipy.cluster.hierarchy as shc\n",
+        "from sklearn.neural_network import MLPClassifier\n",
         "\n",
         "# Import Warnings Module to Suppress Warnings\n",
         "import warnings\n",
@@ -4173,10 +4185,6 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 1 Implementation\n",
-        "from sklearn.cluster import KMeans\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import silhouette_score\n",
-        "from sklearn.cluster import KMeans\n",
         "\n",
         "# Standardize the features\n",
         "scaler = StandardScaler()\n",
@@ -4269,7 +4277,7 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
         "# Initialize KMeans for hyperparameter optimization\n",
         "kmeans = KMeans(random_state=42)\n",
         "\n",
@@ -4355,7 +4363,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.mixture import GaussianMixture\n",
+        "\n",
         "# Standardize the features\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train)\n",
@@ -4425,9 +4433,7 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "from skopt import BayesSearchCV\n",
-        "from skopt.space import Integer\n",
-        "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+        "\n",
         "# Standardize the features\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train)\n",
@@ -4555,7 +4561,7 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 3 Implementation\n",
-        "from sklearn.cluster import AgglomerativeClustering\n",
+        "\n",
         "# Initialize the Hierarchical Clustering model\n",
         "num_clusters = 3  # Specify the number of clusters you want\n",
         "hierarchical = AgglomerativeClustering(n_clusters=num_clusters)\n",
@@ -4602,8 +4608,7 @@
       "cell_type": "code",
       "source": [
         "# Visualizing evaluation Metric Score chart\n",
-        "from pylab import rcParams\n",
-        "import scipy.cluster.hierarchy as shc\n",
+        "\n",
         "plt.figure(figsize=(8,5))\n",
         "dend = shc.dendrogram(shc.linkage(X, method= 'ward'))\n",
         "plt.title('DENDOGRAM',fontsize=10, fontweight='bold')\n",
@@ -4630,8 +4635,7 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 3 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "from skopt import BayesSearchCV\n",
-        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
         "# Define the hyperparameter grid or distributions\n",
         "param_grid = {\n",
         "    'hidden_layer_sizes': [(50,), (100,), (50, 50)],\n",
