--- a/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
+++ b/Netflix_Movies_and_TV_shows_clusteringipynb.ipynb
@@ -400,7 +400,7 @@
         "from sklearn.cluster import KMeans\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.metrics import silhouette_score\n",
-        "\n",
+        "!pip install scikit-learn scikit-optimize\n",
         "from skopt import BayesSearchCV\n",
         "from skopt.space import Integer\n",
         "\n",
@@ -450,7 +450,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path =  \"/content/drive/MyDrive/AlmaBetter/Capstone Projects/Netflix_Movies_and_TV_shows_clustering/\"\n",
+        "path =  \"/content/drive/MyDrive/AlmaBetter/Capstone Projects/Netflix Movies and TV Shows Clustering/\"\n",
         "netflix_dataset = pd.read_csv(path + \"NETFLIX MOVIES AND TV SHOWS CLUSTERING.csv\")"
       ],
       "metadata": {
@@ -3487,37 +3487,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Sample DataFrame\n",
-        "data = pd.DataFrame({\n",
-        "    'col1': [1, 2, 3],\n",
-        "    'col2': ['string1', 'string2', 'string3'],\n",
-        "    'col3': [1.0, 2.5, 3.7],\n",
-        "    'col4': [[1, 2], [3, 4], [5, 6]],\n",
-        "    'col5': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]],\n",
-        "    'col6': [[1, 'a'], [2, 'b'], [3, 'c']]\n",
-        "})\n",
-        "\n",
-        "# Iterate through columns and check data types\n",
-        "for col in data.columns:\n",
-        "    dtype = data[col].dtype\n",
-        "    if dtype == int:\n",
-        "        print(f\"Column '{col}' contains integers\")\n",
-        "    elif dtype == float:\n",
-        "        print(f\"Column '{col}' contains floats\")\n",
-        "    elif dtype == str:\n",
-        "        print(f\"Column '{col}' contains strings\")\n",
-        "    elif dtype == list:\n",
-        "        print(f\"Column '{col}' contains lists\")"
-      ],
-      "metadata": {
-        "id": "fyRqnwOW3DrB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Sample DataFrame with a \"title\" column containing numbers as strings\n",
         "data = pd.DataFrame({'title': ['3', '719', '2359', '9']})\n",
         "\n",
@@ -4261,17 +4230,6 @@
       "metadata": {
         "id": "4qY1EAkEfxKe"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install scikit-learn scikit-optimize"
-      ],
-      "metadata": {
-        "id": "cPX7wSe7NwnI"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
